@@ -1,3 +1,4 @@
+	* fix deadlock caused by some UDP tracker failures
 	* fix potential integer overflow issue in timers on windows
 	* minor fix to peer_proportional mixed_mode algorithm (TCP limit could go too low)
 	* graceful pause fix
